# atari_win32_layer

./: .gitignore  CMakeLists.txt  README.md
include/: gemdos.h  guest_mem_util.h  host_paths.h  logger.h  memory.h  prg_loader.h  tos_layer.h
include/gemdos/: gemdos.h  gemdos_console.h  gemdos_file.h  gemdos_mem.h
src/: gemdos.c  guest_mem_util.c  host_paths.c  logger.c  main.c  memory.c  prg_loader.c  tos_layer.c
src/gemdos/: gemdos.c  gemdos_console.c  gemdos_file.c  gemdos_mem.c
test_programs/: file_io_test.tos  hello.prg  hello_vbcc.tos
